[package]
name = "arbintrary"
version = "0.1.2"
authors = ["npars <npars@users.noreply.github.com>"]
edition = "2018"

description = "Proof of concept for arbitrary integer sizes using generic const."

license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/npars/arbintrary.git"

keywords = ["integer", "unaligned", "misaligned"]
categories = ["embedded", "no-std", "data-structures"]

[dependencies]

[features]
default = ["std"]
std = []
